# meson-cpp

./: .clang-format  .clang-tidy  .gitignore  meson.build  readme.md
main/include/: test1.h
main/src/: main.c  main.cpp  meson.build  test1.c  test1.cpp
subprojects/: .gitignore
subprojects/libprocessor/: meson.build
subprojects/libprocessor/include/processor/: callbacks_functions.hpp  processor.hpp
subprojects/libprocessor/src/: callbacks_functions.cpp  meson.build  processor.cpp
tests/: meson.build  test_main.cpp  test_mock.cpp
